--- a/index.html
+++ b/index.html
@@ -112,18 +112,18 @@
     </style>
   </head>
   <body>
-    <div class="navbar">
-      <div class="dropdown">
-        <button class="dropbtn">
-          Grupo de letras
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-          <a href="#" id="jfs" onclick="cerrarDropdown()">JFS</a>
-          <a href="#" id="tpk" onclick="cerrarDropdown()">TPK</a>
-        </div>
+<div class="navbar">
+    <div class="dropdown">
+      <button class="dropbtn" onclick="toggleDropdown()">
+        Grupo de letras
+        <i class="fa fa-caret-down"></i>
+      </button>
+      <div class="dropdown-content">
+        <a href="#" id="jfs">JFS</a>
+        <a href="#" id="tpk">TPK</a>
       </div>
     </div>
+  </div>
     <div class="container">
       <div class="botones" id="botones">
         <div class="button-row">
