--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
-        <a href="#" id="jfs">JFS</a>
-        <a href="#" id="tpk">TPK</a>
+        <a href="#" id="jfs" onclick="toggleDropdown()">JFS</a>
+        <a href="#" id="tpk" onclick="toggleDropdown()">TPK</a>
       </div>
     </div>
   </div>
