--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       button {
         width: 100%; /* Abarca todo el ancho disponible */
         padding: 10px;
+        marging: 10px;
         font-size: 15px;
       }
 
